--- a/src/app/ingreso/ingreso.page.scss
+++ b/src/app/ingreso/ingreso.page.scss
@@ -1,59 +1,63 @@
-ion-title{
-    margin-top: 5vh;
+ion-card-content, ion-row, .tail, .info, .action, .action-net, .icon-container{
+    display: flex;
+    flex-direction: column;
 }
 
-ion-card{
-    margin: 5vh 0 5vh 0;
+.info, .action, .action-net, .icon-container{
+    justify-content: center;
+}
+
+.action-net, .action, .icon-container{
+    align-items: center;
+}
+
+ion-card, ion-card-content{
+    height: 100%
+}
+
+.data, .tail{
+    height: 40%;
+}
+
+ion-button, .networks{
+    width: 75%;
 }
 
 ion-input{
     border-bottom:1px solid;
 }
 
-ion-label{
+ion-grid{
+    height: 90%;
+    margin: 5vh 0 5vh 0;
+}
+
+.header{
+   height: 20%;
+}
+
+.info{
     width: 100%;
+    height: 50%;
 }
 
-ion-button{
-   width: 75%;     
+.action-net{
+    height: 25%;
 }
 
-ion-col{
-    display: flex;
-    justify-content: center;
+.action{
+    height: 15%;
 }
 
-.datos, .acciones, .icon-container{
-    display: flex;
-    flex-direction: column;
-    
-}
-
-.datos{
-    row-gap: 3vh;   
-    margin: 2vh 0 2vh 0;
-
-}
-.acciones{
-    row-gap: 2vh;
-    align-items: center;
-}
-
-
-.main-container{
-    margin-top: 5vh;
-    margin-bottom: 5vh;
+.networks{
+    display: grid;
+    grid-template-columns: 25% 25% 25%;
+    justify-content: space-between;
+    height: 80%;
 }
 
 .icon-container{
     border: 2px solid #D7D7D7;
-    border-radius: 6%;
-    align-items: center;
-    justify-content: center;
-    width: 75%;
-}
-
-.icon{
-    margin: 1vh 0 1vh 0;
+    border-radius: 15%;
 }
 
