--- a/src/app/registro/registro.page.html
+++ b/src/app/registro/registro.page.html
@@ -44,24 +44,18 @@
 
     <ion-row class="tail">
       <ion-label class="action">
-        
-          <div class="terms-div">
-            <ion-checkbox slot="start"></ion-checkbox>
-            <ion-text
-              ><div class="semibold-text">
-                Aceptar
-                <a id="open-terms-modal" expand="block"
-                  >terminos y condiciones</a
-                >
-              </div></ion-text
-            >
-          </div>
-        
-          
-        
+        <div class="terms-div">
+          <ion-checkbox slot="start"></ion-checkbox>
+          <ion-text
+            ><div class="semibold-text">
+              Aceptar
+              <a id="open-terms-modal" expand="block">terminos y condiciones</a>
+            </div></ion-text
+          >
+        </div>
       </ion-label>
       <ion-label class="action"
-        ><ion-button color="dark" routerLink=""
+        ><ion-button color="dark" routerLink="" class="register-button"
           ><ion-text
             ><div class="semibold-text">Registrarse</div></ion-text
           ></ion-button
