--- a/src/app/inicio/inicio.page.html
+++ b/src/app/inicio/inicio.page.html
@@ -8,32 +8,26 @@
   <ion-grid>
     <ion-row>
       <ion-col size="6">
-        <ion-card>
-          <ion-card-content>
-            <ion-img src="../../assets/img-prueba.webp"></ion-img>
-          </ion-card-content>
-        </ion-card>
+        <a routerLink="product-detail"
+          ><ion-card>
+            <ion-card-content class="card-product">
+              <ion-img src="../../assets/img-prueba.webp"></ion-img>
+              <ion-label class="product-data"
+                ><ion-text>Lampara</ion-text></ion-label
+              >
+              <ion-label class="product-data">$35</ion-label>
+            </ion-card-content>
+          </ion-card></a
+        >
       </ion-col>
       <ion-col size="6">
         <ion-card>
-          <ion-card-content>
+          <ion-card-content class="card-product">
             <ion-img src="../../assets/img-prueba.webp"></ion-img>
-          </ion-card-content>
-        </ion-card>
-      </ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col size="6">
-        <ion-card>
-          <ion-card-content>
-            <ion-img src="../../assets/img-prueba.webp"></ion-img>
-          </ion-card-content>
-        </ion-card>
-      </ion-col>
-      <ion-col size="6">
-        <ion-card>
-          <ion-card-content>
-            <ion-img src="../../assets/img-prueba.webp"></ion-img>
+            <ion-label class="product-data"
+              ><ion-text>Lampara</ion-text></ion-label
+            >
+            <ion-label class="product-data">$35</ion-label>
           </ion-card-content>
         </ion-card>
       </ion-col>
@@ -41,15 +35,47 @@
     <ion-row>
       <ion-col size="6">
         <ion-card>
-          <ion-card-content>
+          <ion-card-content class="card-product">
             <ion-img src="../../assets/img-prueba.webp"></ion-img>
+            <ion-label class="product-data"
+              ><ion-text>Lampara</ion-text></ion-label
+            >
+            <ion-label class="product-data">$35</ion-label>
           </ion-card-content>
         </ion-card>
       </ion-col>
       <ion-col size="6">
         <ion-card>
-          <ion-card-content>
+          <ion-card-content class="card-product">
             <ion-img src="../../assets/img-prueba.webp"></ion-img>
+            <ion-label class="product-data"
+              ><ion-text>Lampara</ion-text></ion-label
+            >
+            <ion-label class="product-data">$35</ion-label>
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col size="6">
+        <ion-card>
+          <ion-card-content class="card-product">
+            <ion-img src="../../assets/img-prueba.webp"></ion-img>
+            <ion-label class="product-data"
+              ><ion-text>Lampara</ion-text></ion-label
+            >
+            <ion-label class="product-data">$35</ion-label>
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+      <ion-col size="6">
+        <ion-card>
+          <ion-card-content class="card-product">
+            <ion-img src="../../assets/img-prueba.webp"></ion-img>
+            <ion-label class="product-data"
+              ><ion-text>Lampara</ion-text></ion-label
+            >
+            <ion-label class="product-data">$35</ion-label>
           </ion-card-content>
         </ion-card>
       </ion-col>
