--- a/src/app/registro/registro.page.scss
+++ b/src/app/registro/registro.page.scss
@@ -74,7 +74,6 @@ ion-grid{
 
 #open-terms-modal{
     text-decoration: underline;
-    cursor: pointer;
 }
 
 ion-modal{
@@ -83,9 +82,13 @@ ion-modal{
 
 .terms-div{
     display: flex;
+    flex-direction: row;
     column-gap: 2vw;
 }
 
+.input-data{
+    font-family: 'Nunito Sans', sans-serif;
+}
 
 
 
