--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -2,22 +2,22 @@
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="inicio">
       <ion-icon name="home-outline"></ion-icon>
-      <ion-label>Inicio</ion-label>
+      <ion-text>Inicio</ion-text>
     </ion-tab-button>
 
     <ion-tab-button tab="favoritos">
       <ion-icon name="bookmark-outline"></ion-icon>
-      <ion-label>Favoritos</ion-label>
+      <ion-text>Favoritos</ion-text>
     </ion-tab-button>
 
     <ion-tab-button tab="notificaciones">
       <ion-icon name="notifications-outline"></ion-icon>
-      <ion-label>Notificaciones</ion-label>
+      <ion-text>Notificaciones</ion-text>
     </ion-tab-button>
 
     <ion-tab-button tab="perfil">
       <ion-icon name="person-outline"></ion-icon>
-      <ion-label>Perfil</ion-label>
+      <ion-text>Perfil</ion-text>
     </ion-tab-button>
   </ion-tab-bar>
 </ion-tabs>
