mejoras en pantalla perfil y creacion de page tarjetas

--- a/src/app/ingreso/ingreso.page.html
+++ b/src/app/ingreso/ingreso.page.html
@@ -1,6 +1,6 @@
 <ion-content>
   <ion-grid>
-    <ion-row class="header">
+    <ion-row class="headline">
       <ion-img src="../../assets/logo.svg"></ion-img>
       <ion-title class="ion-text-center">Iniciar sesión</ion-title>
     </ion-row>
