--- a/src/app/product-detail/product-detail.page.html
+++ b/src/app/product-detail/product-detail.page.html
@@ -1,9 +1,9 @@
 <ion-header>
   <ion-toolbar>
     <div class="header">
-      <ion-icon name="chevron-back-outline" size="large" class="back" routerLink="/tabs/inicio"></ion-icon>
-      <ion-title class="detail-title ion-text-center">Detalle del producto</ion-title>
-      <ion-icon name="cart-outline" size="large" class="cart"></ion-icon>
+      <ion-icon name="chevron-back-outline" size="large" class="header-icon" routerLink="/tabs/inicio"></ion-icon>
+      <ion-title class="ion-text-center header-title">Detalle</ion-title>
+      <ion-icon name="cart-outline" size="large" class="header-icon"></ion-icon>
     </div>
   </ion-toolbar>
 </ion-header>
@@ -22,7 +22,7 @@
           <ion-img src="../../assets/icon/star-icon.svg" class="star-icon"></ion-img>
           <ion-label class="star-number">4.5</ion-label>
         
-        <a routerLink=""><ion-text class="reviews-number">(50) reseñas</ion-text></a>
+        <ion-text class="reviews-number">(50) reseñas</ion-text>
       </ion-row>
       <ion-row class="comment">
         <ion-content>
