--- a/src/app/perfil/perfil.page.scss
+++ b/src/app/perfil/perfil.page.scss
@@ -1,31 +1,34 @@
+ion-card-content, .user, .personal-data, .payment-method, .coupons, .history{
+    align-items: center;
+}
+
+ion-card-content, .main-grid, .name-email, .data-div{
+    display: flex;
+}
+
+.main-grid, .name-email, .options, .data-div{
+    flex-direction: column;
+}
+
 ion-card{
     width: 92%;
 }
 
 ion-card-content{
-    display: flex;
-    flex-direction: column;
+    flex-direction: row;
     padding: 1.2vh 3vw 1.2vh 3vw;
+    justify-content: space-between;
 
 }
 
 .main-grid{
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-    row-gap: 5%;
+    row-gap: 2vh;
 }
 
 .user{
     height: 15%;
-    align-items: center;
     column-gap: 4%;
     margin-left: 4%;
-}
-
-.name-email{
-    display: flex;
-    flex-direction: column;
 }
 
 .name{
@@ -37,14 +40,9 @@ ion-card-content{
 }
 
 .options{
-    flex-direction: column;
-    height: 87%;
     row-gap: 6%;
 }
 
 .personal-data, .payment-method, .coupons, .history{
     justify-content: center;
-    align-items: center;
-    height: 15%;
-    object-fit: contain;
 }
