[#182738484] pantalla agregar tarjeta

--- a/src/app/ingreso/ingreso.page.html
+++ b/src/app/ingreso/ingreso.page.html
@@ -11,13 +11,13 @@
           <ion-label class="info">
             <ion-label class="i">
               <ion-text class="var">Correo</ion-text>
-              <ion-input class="var input-data" type="email"></ion-input>
+              <ion-input class="var" type="text"></ion-input>
             </ion-label>
           </ion-label>
           <ion-label class="info">
             <ion-label class="i">
               <ion-text class="var">Contraseña</ion-text>
-              <ion-input class="var input-data" type="password"></ion-input>
+              <ion-input class="var" type="password"></ion-input>
             </ion-label>
           </ion-label>
         </ion-card-content>
@@ -81,7 +81,7 @@
             </ion-text>
             <ion-label>
               <ion-input
-                class="var input-data"
+                class="var"
                 #inputEmail
                 type="email"
                 (input)="showInput(inputEmail.value)"
