--- a/src/app/perfil/perfil.page.html
+++ b/src/app/perfil/perfil.page.html
@@ -35,7 +35,7 @@
         <ion-card routerLink="tarjetas">
           <ion-card-content>
             <div class="data-div">
-              <ion-label class="data-label">Método de pago</ion-label>
+              <ion-label class="data-label">Tarjetas</ion-label>
               <ion-text><span id="card-counter">2</span> tarjetas registradas</ion-text>
             </div>
             <img src="../../assets/icon/arrow-icon.svg">
